potatoject/GheyParser.cpp

#include "wci/intermediate/TypeSpec.h"
using namespace wci::intermediate;


// Generated from Ghey.g4 by ANTLR 4.7.1


#include "GheyVisitor.h"

#include "GheyParser.h"


using namespace antlrcpp;
using namespace antlr4;

GheyParser::GheyParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

GheyParser::~GheyParser() {
  delete _interpreter;
}

std::string GheyParser::getGrammarFileName() const {
  return "Ghey.g4";
}

const std::vector<std::string>& GheyParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& GheyParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgContext ------------------------------------------------------------------

GheyParser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GheyParser::HeaderContext* GheyParser::ProgContext::header() {
  return getRuleContext<GheyParser::HeaderContext>(0);
}

GheyParser::MainBlockContext* GheyParser::ProgContext::mainBlock() {
  return getRuleContext<GheyParser::MainBlockContext>(0);
}


size_t GheyParser::ProgContext::getRuleIndex() const {
  return GheyParser::RuleProg;
}

antlrcpp::Any GheyParser::ProgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GheyVisitor*>(visitor))
    return parserVisitor->visitProg(this);
  else
    return visitor->visitChildren(this);
}

GheyParser::ProgContext* GheyParser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, GheyParser::RuleProg);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(36);
    header();
    setState(37);
    mainBlock();
    setState(38);
    match(GheyParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- HeaderContext ------------------------------------------------------------------

GheyParser::HeaderContext::HeaderContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GheyParser::HeaderContext::PROG() {
  return getToken(GheyParser::PROG, 0);
}

tree::TerminalNode* GheyParser::HeaderContext::IDENTIFIER() {
  return getToken(GheyParser::IDENTIFIER, 0);
}


size_t GheyParser::HeaderContext::getRuleIndex() const {
  return GheyParser::RuleHeader;
}

antlrcpp::Any GheyParser::HeaderContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GheyVisitor*>(visitor))
    return parserVisitor->visitHeader(this);
  else
    return visitor->visitChildren(this);
}

GheyParser::HeaderContext* GheyParser::header() {
  HeaderContext *_localctx = _tracker.createInstance<HeaderContext>(_ctx, getState());
  enterRule(_localctx, 2, GheyParser::RuleHeader);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(40);
    match(GheyParser::PROG);
    setState(41);
    match(GheyParser::IDENTIFIER);
    setState(42);
    match(GheyParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MainBlockContext ------------------------------------------------------------------

GheyParser::MainBlockContext::MainBlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GheyParser::BlockContext* GheyParser::MainBlockContext::block() {
  return getRuleContext<GheyParser::BlockContext>(0);
}


size_t GheyParser::MainBlockContext::getRuleIndex() const {
  return GheyParser::RuleMainBlock;
}

antlrcpp::Any GheyParser::MainBlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GheyVisitor*>(visitor))
    return parserVisitor->visitMainBlock(this);
  else
    return visitor->visitChildren(this);
}

GheyParser::MainBlockContext* GheyParser::mainBlock() {
  MainBlockContext *_localctx = _tracker.createInstance<MainBlockContext>(_ctx, getState());
  enterRule(_localctx, 4, GheyParser::RuleMainBlock);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(44);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

GheyParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GheyParser::StmtContext* GheyParser::BlockContext::stmt() {
  return getRuleContext<GheyParser::StmtContext>(0);
}

GheyParser::ExprContext* GheyParser::BlockContext::expr() {
  return getRuleContext<GheyParser::ExprContext>(0);
}

tree::TerminalNode* GheyParser::BlockContext::NEWLINE() {
  return getToken(GheyParser::NEWLINE, 0);
}


size_t GheyParser::BlockContext::getRuleIndex() const {
  return GheyParser::RuleBlock;
}

antlrcpp::Any GheyParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GheyVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

GheyParser::BlockContext* GheyParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 6, GheyParser::RuleBlock);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(53);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case GheyParser::T__7:
      case GheyParser::T__9:
      case GheyParser::IF:
      case GheyParser::WHILE:
      case GheyParser::IDENTIFIER:
      case GheyParser::NUM:
      case GheyParser::ADD_OP:
      case GheyParser::SUB_OP: {
        enterOuterAlt(_localctx, 1);
        setState(46);
        stmt();
        break;
      }

      case GheyParser::T__0:
      case GheyParser::T__1:
      case GheyParser::T__2: {
        enterOuterAlt(_localctx, 2);
        setState(51);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == GheyParser::T__2) {
          setState(47);
          match(GheyParser::T__2);
          setState(48);
          expr(0);
          setState(49);
          match(GheyParser::NEWLINE);
        }
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Var_declContext ------------------------------------------------------------------

GheyParser::Var_declContext::Var_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GheyParser::Var_declContext::IDENTIFIER() {
  return getToken(GheyParser::IDENTIFIER, 0);
}

GheyParser::TypesContext* GheyParser::Var_declContext::types() {
  return getRuleContext<GheyParser::TypesContext>(0);
}


size_t GheyParser::Var_declContext::getRuleIndex() const {
  return GheyParser::RuleVar_decl;
}

antlrcpp::Any GheyParser::Var_declContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GheyVisitor*>(visitor))
    return parserVisitor->visitVar_decl(this);
  else
    return visitor->visitChildren(this);
}

GheyParser::Var_declContext* GheyParser::var_decl() {
  Var_declContext *_localctx = _tracker.createInstance<Var_declContext>(_ctx, getState());
  enterRule(_localctx, 8, GheyParser::RuleVar_decl);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(55);
    match(GheyParser::IDENTIFIER);
    setState(56);
    types();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypesContext ------------------------------------------------------------------

GheyParser::TypesContext::TypesContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t GheyParser::TypesContext::getRuleIndex() const {
  return GheyParser::RuleTypes;
}

antlrcpp::Any GheyParser::TypesContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GheyVisitor*>(visitor))
    return parserVisitor->visitTypes(this);
  else
    return visitor->visitChildren(this);
}

GheyParser::TypesContext* GheyParser::types() {
  TypesContext *_localctx = _tracker.createInstance<TypesContext>(_ctx, getState());
  enterRule(_localctx, 10, GheyParser::RuleTypes);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(58);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << GheyParser::T__3)
      | (1ULL << GheyParser::T__4)
      | (1ULL << GheyParser::T__5)
      | (1ULL << GheyParser::T__6))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtContext ------------------------------------------------------------------

GheyParser::StmtContext::StmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GheyParser::Compound_stmtContext* GheyParser::StmtContext::compound_stmt() {
  return getRuleContext<GheyParser::Compound_stmtContext>(0);
}

GheyParser::Assignment_stmtContext* GheyParser::StmtContext::assignment_stmt() {
  return getRuleContext<GheyParser::Assignment_stmtContext>(0);
}

GheyParser::If_stmtContext* GheyParser::StmtContext::if_stmt() {
  return getRuleContext<GheyParser::If_stmtContext>(0);
}

GheyParser::While_loopContext* GheyParser::StmtContext::while_loop() {
  return getRuleContext<GheyParser::While_loopContext>(0);
}

GheyParser::ExprContext* GheyParser::StmtContext::expr() {
  return getRuleContext<GheyParser::ExprContext>(0);
}

GheyParser::Var_declContext* GheyParser::StmtContext::var_decl() {
  return getRuleContext<GheyParser::Var_declContext>(0);
}


size_t GheyParser::StmtContext::getRuleIndex() const {
  return GheyParser::RuleStmt;
}

antlrcpp::Any GheyParser::StmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GheyVisitor*>(visitor))
    return parserVisitor->visitStmt(this);
  else
    return visitor->visitChildren(this);
}

GheyParser::StmtContext* GheyParser::stmt() {
  StmtContext *_localctx = _tracker.createInstance<StmtContext>(_ctx, getState());
  enterRule(_localctx, 12, GheyParser::RuleStmt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    setState(78);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(60);
      compound_stmt();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(61);
      assignment_stmt();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(62);
      if_stmt();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(63);
      while_loop();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(64);
      expr(0);
      setState(68);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
      while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
        if (alt == 1) {
          setState(65);
          match(GheyParser::T__1); 
        }
        setState(70);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
      }
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(71);
      var_decl();
      setState(75);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
      while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
        if (alt == 1) {
          setState(72);
          match(GheyParser::T__1); 
        }
        setState(77);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
      }
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Compound_stmtContext ------------------------------------------------------------------

GheyParser::Compound_stmtContext::Compound_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<GheyParser::StmtContext *> GheyParser::Compound_stmtContext::stmt() {
  return getRuleContexts<GheyParser::StmtContext>();
}

GheyParser::StmtContext* GheyParser::Compound_stmtContext::stmt(size_t i) {
  return getRuleContext<GheyParser::StmtContext>(i);
}


size_t GheyParser::Compound_stmtContext::getRuleIndex() const {
  return GheyParser::RuleCompound_stmt;
}

antlrcpp::Any GheyParser::Compound_stmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GheyVisitor*>(visitor))
    return parserVisitor->visitCompound_stmt(this);
  else
    return visitor->visitChildren(this);
}

GheyParser::Compound_stmtContext* GheyParser::compound_stmt() {
  Compound_stmtContext *_localctx = _tracker.createInstance<Compound_stmtContext>(_ctx, getState());
  enterRule(_localctx, 14, GheyParser::RuleCompound_stmt);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(80);
    match(GheyParser::T__7);
    setState(86);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << GheyParser::T__7)
      | (1ULL << GheyParser::T__9)
      | (1ULL << GheyParser::IF)
      | (1ULL << GheyParser::WHILE)
      | (1ULL << GheyParser::IDENTIFIER)
      | (1ULL << GheyParser::NUM)
      | (1ULL << GheyParser::ADD_OP)
      | (1ULL << GheyParser::SUB_OP))) != 0)) {
      setState(81);
      stmt();
      setState(82);
      match(GheyParser::T__1);
      setState(88);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(89);
    match(GheyParser::T__8);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Assignment_stmtContext ------------------------------------------------------------------

GheyParser::Assignment_stmtContext::Assignment_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GheyParser::Var_declContext* GheyParser::Assignment_stmtContext::var_decl() {
  return getRuleContext<GheyParser::Var_declContext>(0);
}

GheyParser::ExprContext* GheyParser::Assignment_stmtContext::expr() {
  return getRuleContext<GheyParser::ExprContext>(0);
}


size_t GheyParser::Assignment_stmtContext::getRuleIndex() const {
  return GheyParser::RuleAssignment_stmt;
}

antlrcpp::Any GheyParser::Assignment_stmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GheyVisitor*>(visitor))
    return parserVisitor->visitAssignment_stmt(this);
  else
    return visitor->visitChildren(this);
}

GheyParser::Assignment_stmtContext* GheyParser::assignment_stmt() {
  Assignment_stmtContext *_localctx = _tracker.createInstance<Assignment_stmtContext>(_ctx, getState());
  enterRule(_localctx, 16, GheyParser::RuleAssignment_stmt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(91);
    var_decl();
    setState(92);
    match(GheyParser::EQ_OP);
    setState(93);
    expr(0);
    setState(97);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(94);
        match(GheyParser::T__1); 
      }
      setState(99);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- If_stmtContext ------------------------------------------------------------------

GheyParser::If_stmtContext::If_stmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GheyParser::If_stmtContext::IF() {
  return getToken(GheyParser::IF, 0);
}

std::vector<GheyParser::Compound_stmtContext *> GheyParser::If_stmtContext::compound_stmt() {
  return getRuleContexts<GheyParser::Compound_stmtContext>();
}

GheyParser::Compound_stmtContext* GheyParser::If_stmtContext::compound_stmt(size_t i) {
  return getRuleContext<GheyParser::Compound_stmtContext>(i);
}

GheyParser::ExprContext* GheyParser::If_stmtContext::expr() {
  return getRuleContext<GheyParser::ExprContext>(0);
}

tree::TerminalNode* GheyParser::If_stmtContext::ELSE() {
  return getToken(GheyParser::ELSE, 0);
}


size_t GheyParser::If_stmtContext::getRuleIndex() const {
  return GheyParser::RuleIf_stmt;
}

antlrcpp::Any GheyParser::If_stmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GheyVisitor*>(visitor))
    return parserVisitor->visitIf_stmt(this);
  else
    return visitor->visitChildren(this);
}

GheyParser::If_stmtContext* GheyParser::if_stmt() {
  If_stmtContext *_localctx = _tracker.createInstance<If_stmtContext>(_ctx, getState());
  enterRule(_localctx, 18, GheyParser::RuleIf_stmt);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(100);
    match(GheyParser::IF);

    setState(101);
    match(GheyParser::T__9);
    setState(102);
    expr(0);
    setState(103);
    match(GheyParser::T__10);
    setState(105);
    compound_stmt();
    setState(108);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == GheyParser::ELSE) {
      setState(106);
      match(GheyParser::ELSE);
      setState(107);
      compound_stmt();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- While_loopContext ------------------------------------------------------------------

GheyParser::While_loopContext::While_loopContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GheyParser::While_loopContext::WHILE() {
  return getToken(GheyParser::WHILE, 0);
}

GheyParser::ExprContext* GheyParser::While_loopContext::expr() {
  return getRuleContext<GheyParser::ExprContext>(0);
}

GheyParser::BlockContext* GheyParser::While_loopContext::block() {
  return getRuleContext<GheyParser::BlockContext>(0);
}


size_t GheyParser::While_loopContext::getRuleIndex() const {
  return GheyParser::RuleWhile_loop;
}

antlrcpp::Any GheyParser::While_loopContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GheyVisitor*>(visitor))
    return parserVisitor->visitWhile_loop(this);
  else
    return visitor->visitChildren(this);
}

GheyParser::While_loopContext* GheyParser::while_loop() {
  While_loopContext *_localctx = _tracker.createInstance<While_loopContext>(_ctx, getState());
  enterRule(_localctx, 20, GheyParser::RuleWhile_loop);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(110);
    match(GheyParser::WHILE);
    setState(111);
    expr(0);
    setState(112);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableContext ------------------------------------------------------------------

GheyParser::VariableContext::VariableContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GheyParser::VariableContext::IDENTIFIER() {
  return getToken(GheyParser::IDENTIFIER, 0);
}


size_t GheyParser::VariableContext::getRuleIndex() const {
  return GheyParser::RuleVariable;
}

antlrcpp::Any GheyParser::VariableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GheyVisitor*>(visitor))
    return parserVisitor->visitVariable(this);
  else
    return visitor->visitChildren(this);
}

GheyParser::VariableContext* GheyParser::variable() {
  VariableContext *_localctx = _tracker.createInstance<VariableContext>(_ctx, getState());
  enterRule(_localctx, 22, GheyParser::RuleVariable);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(114);
    match(GheyParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

GheyParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t GheyParser::ExprContext::getRuleIndex() const {
  return GheyParser::RuleExpr;
}

void GheyParser::ExprContext::copyFrom(ExprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
  this->type = ctx->type;
}

//----------------- VariableExprContext ------------------------------------------------------------------

GheyParser::VariableContext* GheyParser::VariableExprContext::variable() {
  return getRuleContext<GheyParser::VariableContext>(0);
}

GheyParser::VariableExprContext::VariableExprContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any GheyParser::VariableExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GheyVisitor*>(visitor))
    return parserVisitor->visitVariableExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Add_sub_opExprContext ------------------------------------------------------------------

std::vector<GheyParser::ExprContext *> GheyParser::Add_sub_opExprContext::expr() {
  return getRuleContexts<GheyParser::ExprContext>();
}

GheyParser::ExprContext* GheyParser::Add_sub_opExprContext::expr(size_t i) {
  return getRuleContext<GheyParser::ExprContext>(i);
}

GheyParser::Add_sub_opContext* GheyParser::Add_sub_opExprContext::add_sub_op() {
  return getRuleContext<GheyParser::Add_sub_opContext>(0);
}

GheyParser::Add_sub_opExprContext::Add_sub_opExprContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any GheyParser::Add_sub_opExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GheyVisitor*>(visitor))
    return parserVisitor->visitAdd_sub_opExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Rel_opExprContext ------------------------------------------------------------------

std::vector<GheyParser::ExprContext *> GheyParser::Rel_opExprContext::expr() {
  return getRuleContexts<GheyParser::ExprContext>();
}

GheyParser::ExprContext* GheyParser::Rel_opExprContext::expr(size_t i) {
  return getRuleContext<GheyParser::ExprContext>(i);
}

GheyParser::Rel_opContext* GheyParser::Rel_opExprContext::rel_op() {
  return getRuleContext<GheyParser::Rel_opContext>(0);
}

GheyParser::Rel_opExprContext::Rel_opExprContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any GheyParser::Rel_opExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GheyVisitor*>(visitor))
    return parserVisitor->visitRel_opExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- NumberExprContext ------------------------------------------------------------------

GheyParser::NumberContext* GheyParser::NumberExprContext::number() {
  return getRuleContext<GheyParser::NumberContext>(0);
}

GheyParser::NumberExprContext::NumberExprContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any GheyParser::NumberExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GheyVisitor*>(visitor))
    return parserVisitor->visitNumberExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Mul_div_opExprContext ------------------------------------------------------------------

std::vector<GheyParser::ExprContext *> GheyParser::Mul_div_opExprContext::expr() {
  return getRuleContexts<GheyParser::ExprContext>();
}

GheyParser::ExprContext* GheyParser::Mul_div_opExprContext::expr(size_t i) {
  return getRuleContext<GheyParser::ExprContext>(i);
}

GheyParser::Mul_div_opContext* GheyParser::Mul_div_opExprContext::mul_div_op() {
  return getRuleContext<GheyParser::Mul_div_opContext>(0);
}

GheyParser::Mul_div_opExprContext::Mul_div_opExprContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any GheyParser::Mul_div_opExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GheyVisitor*>(visitor))
    return parserVisitor->visitMul_div_opExpr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ParenExprContext ------------------------------------------------------------------

GheyParser::ExprContext* GheyParser::ParenExprContext::expr() {
  return getRuleContext<GheyParser::ExprContext>(0);
}

GheyParser::ParenExprContext::ParenExprContext(ExprContext *ctx) { copyFrom(ctx); }

antlrcpp::Any GheyParser::ParenExprContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GheyVisitor*>(visitor))
    return parserVisitor->visitParenExpr(this);
  else
    return visitor->visitChildren(this);
}

GheyParser::ExprContext* GheyParser::expr() {
   return expr(0);
}

GheyParser::ExprContext* GheyParser::expr(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  GheyParser::ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, parentState);
  GheyParser::ExprContext *previousContext = _localctx;
  size_t startState = 24;
  enterRecursionRule(_localctx, 24, GheyParser::RuleExpr, precedence);

    

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(123);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case GheyParser::NUM:
      case GheyParser::ADD_OP:
      case GheyParser::SUB_OP: {
        _localctx = _tracker.createInstance<NumberExprContext>(_localctx);
        _ctx = _localctx;
        previousContext = _localctx;

        setState(117);
        number();
        break;
      }

      case GheyParser::IDENTIFIER: {
        _localctx = _tracker.createInstance<VariableExprContext>(_localctx);
        _ctx = _localctx;
        previousContext = _localctx;
        setState(118);
        variable();
        break;
      }

      case GheyParser::T__9: {
        _localctx = _tracker.createInstance<ParenExprContext>(_localctx);
        _ctx = _localctx;
        previousContext = _localctx;
        setState(119);
        match(GheyParser::T__9);
        setState(120);
        expr(0);
        setState(121);
        match(GheyParser::T__10);
        break;
      }
